Added word2vec model
- Added a word2vec model based on TF-IDF.
- Evaluatated with a linear SVM.

--- a/models/02_tfidf/helper.ipynb
+++ b/models/02_tfidf/helper.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -38,13 +38,437 @@
     "        data.at[index, 'body'] = list(skipgrams(data.loc[index, 'body'].split(), n, k))\n",
     "    return data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>body</th>\n",
+       "      <th>isAdHominem</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[(What, makes, corporations), (What, makes, di...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[(&gt;there, are, arguments), (&gt;there, are, that)...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[(Basically, to, believe), (Basically, to, a),...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[(The, punishment, for), (The, punishment, her...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[(No, it, doesn't.), (No, it, Sex), (No, it, i...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>[(I, know, I), (I, know, shouldn't), (I, know,...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>[(You, weren't, at), (You, weren't, a), (You, ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>[(&gt;, My, point), (&gt;, My, was), (&gt;, My, that), ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>[(Fuck, Trump,, there), (Fuck, Trump,, is), (F...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>[(I, have, an), (I, have, extremely), (I, have...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>[(I, am, a), (I, am, 16), (I, am, year), (I, a...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>[(&gt;Are, you, taking), (&gt;Are, you, umbrage), (&gt;...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>[(Alright,, I'm, just), (Alright,, I'm, going)...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>[(Today, I, was), (Today, I, asked), (Today, I...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>[(It, wasn't, an), (It, wasn't, argument,), (I...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>[(&gt;misconceptions, of, studies), (&gt;misconcepti...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>[(In, Switzerland,, school), (In, Switzerland,...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>[(Guns, are, used), (Guns, are, safely), (Guns...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>[(What, about, Yongzheng), (What, about, emanc...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>[(No, you, hate), (No, you, liberals), (No, yo...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>[(I'm, not, really), (I'm, not, sure), (I'm, n...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>[(Except, [the, CDC), (Except, [the, study](ht...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>[(Dr., Carson, is), (Dr., Carson, smarter), (D...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>[(&gt;, Am, I), (&gt;, Am, being), (&gt;, Am, unreasona...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>[(Nope., You, using), (Nope., You, the), (Nope...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>[(Lmao, values., That's), (Lmao, values., why)...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>[(No,, as, the), (No,, as, WBC), (No,, as, con...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>[(&gt;No., Next., Why), (&gt;No., Next., not?), (&gt;No...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>[(How, do, you), (How, do, know), (How, do, th...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>[(I, like, your), (I, like, rebuttal), (I, lik...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29630</th>\n",
+       "      <td>[(Animal, testing, for), (Animal, testing, med...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29631</th>\n",
+       "      <td>[(It, has, to), (It, has, be), (It, has, balan...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29632</th>\n",
+       "      <td>[(Animal, testing, helps), (Animal, testing, t...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29633</th>\n",
+       "      <td>[(Although, any, suffering), (Although, any, o...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29634</th>\n",
+       "      <td>[(Animal, testing, leads), (Animal, testing, t...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29635</th>\n",
+       "      <td>[(Animal, testing, is), (Animal, testing, a), ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29636</th>\n",
+       "      <td>[(Animal, testing, helps), (Animal, testing, s...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29637</th>\n",
+       "      <td>[(Although, it, is), (Although, it, a), (Altho...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29638</th>\n",
+       "      <td>[(Animal, testing, for), (Animal, testing, med...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29639</th>\n",
+       "      <td>[(I, really, don't), (I, really, think), (I, r...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29640</th>\n",
+       "      <td>[(Greek, should, leave), (Greek, should, Euroz...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29641</th>\n",
+       "      <td>[(Greece, should, leave), (Greece, should, the...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29642</th>\n",
+       "      <td>[(Greece, needs, to), (Greece, needs, stay), (...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29643</th>\n",
+       "      <td>[(Greece, does, not), (Greece, does, deserve),...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29644</th>\n",
+       "      <td>[(You, are, a), (You, are, criminal.), (You, a...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29645</th>\n",
+       "      <td>[(Economic, experts, say), (Economic, experts,...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29646</th>\n",
+       "      <td>[(The, EU, would), (The, EU, be), (The, EU, be...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29647</th>\n",
+       "      <td>[(But, every, country), (But, every, that), (B...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29648</th>\n",
+       "      <td>[(No., Greece, is), (No., Greece, one), (No., ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29649</th>\n",
+       "      <td>[(Yes,, if, the), (Yes,, if, scientifical), (Y...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29650</th>\n",
+       "      <td>[(of, course, it), (of, course, all), (of, cou...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29651</th>\n",
+       "      <td>[(Of, course,, with), (Of, course,, unlimited)...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29652</th>\n",
+       "      <td>[(No, way,, flying), (No, way,, cars), (No, wa...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29653</th>\n",
+       "      <td>[(Even, if, that), (Even, if, were), (Even, if...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29654</th>\n",
+       "      <td>[(Flying, cars, are), (Flying, cars, the), (Fl...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29655</th>\n",
+       "      <td>[(Flying, cars, will), (Flying, cars, become),...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29656</th>\n",
+       "      <td>[(The, technical, expertise), (The, technical,...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29657</th>\n",
+       "      <td>[(Yes,, companies, are), (Yes,, companies, alr...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29658</th>\n",
+       "      <td>[(Too, many, slow), (Too, many, imbeciles), (T...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29659</th>\n",
+       "      <td>[(Of, course, they), (Of, course, will.), (Of,...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>29660 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    body  isAdHominem\n",
+       "0      [(What, makes, corporations), (What, makes, di...        False\n",
+       "1      [(>there, are, arguments), (>there, are, that)...         True\n",
+       "2      [(Basically, to, believe), (Basically, to, a),...        False\n",
+       "3      [(The, punishment, for), (The, punishment, her...        False\n",
+       "4      [(No, it, doesn't.), (No, it, Sex), (No, it, i...        False\n",
+       "5      [(I, know, I), (I, know, shouldn't), (I, know,...        False\n",
+       "6      [(You, weren't, at), (You, weren't, a), (You, ...        False\n",
+       "7      [(>, My, point), (>, My, was), (>, My, that), ...        False\n",
+       "8      [(Fuck, Trump,, there), (Fuck, Trump,, is), (F...        False\n",
+       "9      [(I, have, an), (I, have, extremely), (I, have...        False\n",
+       "10     [(I, am, a), (I, am, 16), (I, am, year), (I, a...        False\n",
+       "11     [(>Are, you, taking), (>Are, you, umbrage), (>...        False\n",
+       "12     [(Alright,, I'm, just), (Alright,, I'm, going)...        False\n",
+       "13     [(Today, I, was), (Today, I, asked), (Today, I...        False\n",
+       "14     [(It, wasn't, an), (It, wasn't, argument,), (I...        False\n",
+       "15     [(>misconceptions, of, studies), (>misconcepti...        False\n",
+       "16     [(In, Switzerland,, school), (In, Switzerland,...        False\n",
+       "17     [(Guns, are, used), (Guns, are, safely), (Guns...        False\n",
+       "18     [(What, about, Yongzheng), (What, about, emanc...        False\n",
+       "19     [(No, you, hate), (No, you, liberals), (No, yo...         True\n",
+       "20     [(I'm, not, really), (I'm, not, sure), (I'm, n...        False\n",
+       "21     [(Except, [the, CDC), (Except, [the, study](ht...        False\n",
+       "22     [(Dr., Carson, is), (Dr., Carson, smarter), (D...         True\n",
+       "23     [(>, Am, I), (>, Am, being), (>, Am, unreasona...        False\n",
+       "24     [(Nope., You, using), (Nope., You, the), (Nope...        False\n",
+       "25     [(Lmao, values., That's), (Lmao, values., why)...        False\n",
+       "26     [(No,, as, the), (No,, as, WBC), (No,, as, con...        False\n",
+       "27     [(>No., Next., Why), (>No., Next., not?), (>No...        False\n",
+       "28     [(How, do, you), (How, do, know), (How, do, th...        False\n",
+       "29     [(I, like, your), (I, like, rebuttal), (I, lik...        False\n",
+       "...                                                  ...          ...\n",
+       "29630  [(Animal, testing, for), (Animal, testing, med...        False\n",
+       "29631  [(It, has, to), (It, has, be), (It, has, balan...        False\n",
+       "29632  [(Animal, testing, helps), (Animal, testing, t...        False\n",
+       "29633  [(Although, any, suffering), (Although, any, o...        False\n",
+       "29634  [(Animal, testing, leads), (Animal, testing, t...        False\n",
+       "29635  [(Animal, testing, is), (Animal, testing, a), ...        False\n",
+       "29636  [(Animal, testing, helps), (Animal, testing, s...        False\n",
+       "29637  [(Although, it, is), (Although, it, a), (Altho...        False\n",
+       "29638  [(Animal, testing, for), (Animal, testing, med...        False\n",
+       "29639  [(I, really, don't), (I, really, think), (I, r...        False\n",
+       "29640  [(Greek, should, leave), (Greek, should, Euroz...        False\n",
+       "29641  [(Greece, should, leave), (Greece, should, the...        False\n",
+       "29642  [(Greece, needs, to), (Greece, needs, stay), (...        False\n",
+       "29643  [(Greece, does, not), (Greece, does, deserve),...        False\n",
+       "29644  [(You, are, a), (You, are, criminal.), (You, a...         True\n",
+       "29645  [(Economic, experts, say), (Economic, experts,...        False\n",
+       "29646  [(The, EU, would), (The, EU, be), (The, EU, be...        False\n",
+       "29647  [(But, every, country), (But, every, that), (B...        False\n",
+       "29648  [(No., Greece, is), (No., Greece, one), (No., ...        False\n",
+       "29649  [(Yes,, if, the), (Yes,, if, scientifical), (Y...        False\n",
+       "29650  [(of, course, it), (of, course, all), (of, cou...         True\n",
+       "29651  [(Of, course,, with), (Of, course,, unlimited)...        False\n",
+       "29652  [(No, way,, flying), (No, way,, cars), (No, wa...        False\n",
+       "29653  [(Even, if, that), (Even, if, were), (Even, if...         True\n",
+       "29654  [(Flying, cars, are), (Flying, cars, the), (Fl...        False\n",
+       "29655  [(Flying, cars, will), (Flying, cars, become),...        False\n",
+       "29656  [(The, technical, expertise), (The, technical,...        False\n",
+       "29657  [(Yes,, companies, are), (Yes,, companies, alr...        False\n",
+       "29658  [(Too, many, slow), (Too, many, imbeciles), (T...         True\n",
+       "29659  [(Of, course, they), (Of, course, will.), (Of,...        False\n",
+       "\n",
+       "[29660 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_data_with_skip_n_grams(3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (robin_env)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "robin_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -56,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
