--- a/data/ad_hominem/clean_dataset.ipynb
+++ b/data/ad_hominem/clean_dataset.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning Reddit Dataset\n",
+    "Remove quotes, endlines, etc."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,10 +20,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import dataframe and take 2 entries to analyze"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -64,6 +79,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cleaning the quotes, URLs, etc.\n",
+    "See functions [clean()](cleanData.py) and [removeWords()](cleanData.py)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -72,6 +95,13 @@
     "for i in fallacies.index.values:\n",
     "    fallacies.loc[i, \"reddit_ad_hominem.body\"] = clean(fallacies.loc[i, \"reddit_ad_hominem.body\"]);\n",
     "    fallacies.loc[i, \"reddit_ad_hominem.body\"] =  removeWords(fallacies.loc[i, \"reddit_ad_hominem.body\"]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look again at the cleaned data entries"
    ]
   },
   {
@@ -91,9 +121,15 @@
     }
    ],
    "source": [
-    "fallacies.head()\n",
     "print(fallacies.loc[1, \"reddit_ad_hominem.body\"] + \"\\n\\n\")\n",
     "print(fallacies.loc[21, \"reddit_ad_hominem.body\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Export the dataframe"
    ]
   },
   {
@@ -104,13 +140,6 @@
    "source": [
     "fallacies.to_csv(\"./ad_hominems_cleaned_Murilo.csv\", sep=',')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
